--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@webbar/digitaloceanapps",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "private": false,
-  "description": "",
+  "description": "Shell scripts to manage, get & update DigitalOcean Apps",
   "scripts": {
     "test-get": "./scripts/getspec.sh webbar webbar-website-prod",
     "test-watch": "./scripts/watchpipeline webbar webbar-website-prod",
-    "test-update": "./scripts/watchpipeline webbar webbar-website-prod"
+    "test-update": "./scripts/updatespec webbar webbar-website-prod"
   },
-  "author": "webbar GmbH, https://webbar.dev",
+  "author": "webbar GmbH, https://webbar.dev, Adrian Stanek",
   "license": "MIT"
 }
