--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webbar/digitaloceanapps",
-  "version": "1.0.7",
+  "version": "1.0.8,
   "private": false,
   "description": "Shell scripts to manage, get & update DigitalOcean Apps",
   "scripts": {
