Clarify installation steps in README
Revamped the installation steps in the README file for better clarity and added headings for each major step. Also incremented the package version from 1.0.8 to 1.0.9 in package.json.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webbar/digitaloceanapps",
-  "version": "1.0.8,
+  "version": "1.0.9",
   "private": false,
   "description": "Shell scripts to manage, get & update DigitalOcean Apps",
   "scripts": {
